# bill-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: app.rs  db.rs  main.rs  models.rs  pdf.rs  schema.rs  types.rs  ui.rs
templates/: qr_bill.tpl  qr_bill.typ
