[package]
name = "bill-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
qrcode = "0.14.1"
eframe = "0.33.2"
egui = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"
typst = "0.14.0"
typst-pdf = "0.14.0"
typst-assets = "0.14.0"
comemo = "0.5.0"
text_placeholder = "0.5.1"
dirs = "6.0.0"
rfd = "0.15.4"
iso_11649 = "0.1.2"
iban = "0.2.0"
typst-kit = "0.14.0"
tar = "0.4.44"
ureq = "3.1.4"
zune-inflate = "0.2.54"
time = "0.3.44"
